# books-exercises

./: .gitignore  README.md
at26/: .gitignore  6502.html  dino.asm  dino.lst  dino.s.psd  dino.sym  dinos.aseprite  example.asm  giraffe.aseprite  hello.asm  hello.txt  m.asm  missile.asm  offline-sprite-2x.psd  sample.asm  sprites-2.xcf  sprites.asm  sprites.xcf  subp  subp.asm  test  test-bed.rom  test.asm  test.lst  test.sym
at26/6502_files/: NOP_  css2  site.91f108dfe8.css
at26/blog/: entry1.md  entry2.md  entry3.md  entry4.md
at26/docs/: notes.txt  sbc.csv  sbc_without_clc.csv
dp-for-coding-interview/: boards.cpp  example-8-2.cpp  example-8-3.cpp  example-8-4.cpp  example-8.1  example-9-1.cpp  example-9-2.cpp  question-8-2.cpp  question-8-3.cpp  strings-6.1
fp-in-scala/: .gitignore  build.sbt
fp-in-scala/src/main/scala/coursera/: Week1.scala
fp-in-scala/src/main/scala/fpinscala/datastructures/: List.scala  Tree.scala
fp-in-scala/src/main/scala/fpinscala/errorhandling/: Either.scala  Misc.scala  Option.scala
fp-in-scala/src/main/scala/fpinscala/lazyness/: Stream.scala
fp-in-scala/src/main/scala/fpinscala/purestate/: RNG.scala
fp-in-scala/src/test/scala/coursera/: Week1Spec.scala
fp-in-scala/src/test/scala/fpinscala/datastructures/: ListSpec.scala  TreeSpec.scala
fp-in-scala/src/test/scala/fpinscala/errorhandling/: EitherSpec.scala  MiscSpec.scala  OptionSpec.scala
fp-in-scala/src/test/scala/fpinscala/lazyness/: StreamSpec.scala
fp-in-scala/src/test/scala/fpinscala/purestate/: RngSpec.scala
gl-tut/: CMakeLists.txt  README.md
gl-tut/lib/glad/: CMakeLists.txt
gl-tut/lib/glad/include/glad/: glad.h
gl-tut/lib/glad/src/: glad.c
gl-tut/res/glsl/: shaders-more-atts.frag  shaders-more-atts.vert  shaders-uniform.frag  tut.frag  tut.vert
gl-tut/src/cxx/: ebo.cpp  main.cpp  shader.hpp  shaders-more-atts.cpp
gl-tut/src/cxx/ch1/: ebo.cpp  hello-triangle.cpp  shaders-more-atts.cpp  shaders-uniform.cpp
gl-tut/src/cxx/common/: shader.hpp  shader_program.hpp
physics-for-gamedev/: exercise-1.wxmx  friction.p8
